2014-01-09  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/flot/pandora.flot.js
	include/graphs/functions_flot.php: Fixed problem with the overview
	graph in IE9 for incident #477

2014-01-09  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions.php: added function "https_is_running".
	
	* include/functions_gis.php, operation/gis_maps/render_view.php,
	operation/gis_maps/public_console.php, godmode/setup/gis_step_2.php:
	fixed the urls for google maps when it is running in https mode.
	
	Fixes: #2403

2014-01-09  Junichi Satoh  <junichi@rworks.jp>

	* godmode/servers/plugin.php: Fixed that unexpected strings are set
	in parameter macro fields when multi-byte characters are entered.

2014-01-08  Miguel de Dios <miguel.dedios@artica.es>
	
	* general/header.php: fixed the empty action with trying to write
	some thing in the global search field when it is search anything.

2014-01-08  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_gis.php: fixed the agent name label.
	
	Fixes: #2401

2014-01-08  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_gis.php: fixed with a dirty hack the bug about
	the google maps with own old version of openlayer.

2014-01-07  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/planned_downtime.list.php: fixed the manual stop
	of planned downtime.
	
	Fixes: #479 (Integria locally)

2014-01-07  Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/agentes/networkmap.php: fixed the save the font size in
	the networkmaps.
	
	Fixes: #2408

2013-12-27 Hirofumi Kosaka <kosaka@rworks.jp>

	* include/functions_api.php: Added 'plugin_macros' and
	'module_macros' to the return column of tree_agents API.

2013-12-27 Hirofumi Kosaka <kosaka@rworks.jp>

	* include/functions_api.php: Added 'module_macros' parameter
	to api_set_create_*_modules, api_set_update_*_module, and so
	on. Also added 'macros' parameter to plugin module functions.

	Fixes: #2398
